--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,10 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 :root {
   --ifm-color-primary: #fde047;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-font-family-base: "Inter";
 }
 
 .navbar__logo > img {
   border-radius: 50%;
+}
+
+.footer {
+  --ifm-footer-background-color: var(--ifm-navbar-background-color);
 }
 
 .language-json button {
