--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -44,3 +44,61 @@
 .language-json button {
   display: none !important;
 }
+
+/* Scalar */
+.references-layout {
+  height: max-content;
+}
+
+.references-classic-header-container {
+  display: none;
+}
+
+.section.introduction-section {
+  padding: 16px 0 !important;
+}
+
+.section-container {
+  border: none !important;
+  padding: 0 !important;
+}
+
+.tag-section {
+  padding: 0 !important;
+}
+
+.show-api-client-button,
+.scalar-api-client__send-request-button {
+  background: var(--theme-color-accent) !important;
+  color: black !important;
+}
+
+.show-api-client-button > span,
+.show-api-client-button > svg {
+  color: black !important;
+}
+
+#headlessui-portal-root {
+  display: none !important;
+}
+
+:root {
+  --theme-color-accent: var(--ifm-color-primary);
+  --theme-border-color: rgba(255, 255, 255, 0.1);
+  --default-theme-color-1: rgba(255, 255, 255, 0.9);
+  --default-theme-color-2: rgba(255, 255, 255, 0.62);
+  --default-theme-color-3: rgba(255, 255, 255, 0.44);
+  --default-theme-background-1: var(--ifm-background-color);
+  --default-theme-background-2: #252525;
+  --default-theme-background-3: #323232;
+  --default-theme-button-1: #f6f6f6;
+  --default-theme-button-1-color: #000;
+  --default-theme-button-1-hover: #e7e7e7;
+  --default-theme-color-green: #00b648;
+  --default-theme-color-red: #dc1b19;
+  --default-theme-color-yellow: #ffc90d;
+  --default-theme-color-blue: #4eb3ec;
+  --default-theme-color-orange: #ff8d4d;
+  --default-theme-color-purple: #b191f9;
+  --scalar-api-client-color: var(--ifm-color-primary);
+}
